--- a/kiosk/main.html
+++ b/kiosk/main.html
@@ -4,10 +4,37 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>kiosk</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
     <div class="wrap">
-     
+     <h1>Kiosk</h1>
+     <div id="menu">
+      <h2>메뉴</h2>
+       <ul>
+        <li><img src="img/p1.jpg" alt="순대"><span class="p_name">순대</span><span class="p_price">3,500</span></li>
+        <li><img src="img/p2.jpg" alt="비빔국수"><span class="p_name">비빔국수</span><span class="p_price">4,500</span></li>
+        <li><img src="img/p3.jpg" alt="김밥"><span class="p_name">김밥</span><span class="p_price">2,800</span></li>
+        <li><img src="img/p4.jpg" alt="잔치국수"><span class="p_name">잔치국수</span><span class="p_price">4,200</span></li>
+        <li><img src="img/p5.jpg" alt="튀김"><span class="p_name">튀김</span><span class="p_price">2,000</span></li>
+        <li><img src="img/p6.jpg" alt="야채죽"><span class="p_name">야채죽</span><span class="p_price">5,000</span></li>
+        <li><img src="img/p7.jpg" alt="돈까스"><span class="p_name">돈까스</span><span class="p_price">6,500</span></li>
+        <li><img src="img/p8.jpg" alt="비빔밥"><span class="p_name">비빔밥</span><span class="p_price">5,500</span></li>
+        <li><img src="img/p9.jpg" alt="군만두"><span class="p_name">군만두</span><span class="p_price">2,400</span></li>
+        <li><img src="img/p10.jpg" alt="육개장"><span class="p_name">육개장</span><span class="p_price">7,000</span></li>
+        <li><img src="img/p11.jpg" alt="라면"><span class="p_name">라면</span><span class="p_price">2,500</span></li>
+        <li><img src="img/p12.jpg" alt="떡볶이"><span class="p_name">떡볶이</span><span class="p_price">3,000</span></li>
+        <li><img src="img/p13.jpg" alt="우동"><span class="p_name">우동</span><span class="p_price">4,000</span></li>
+        <li><img src="img/p14.jpg" alt="피자"><span class="p_name">피자</span><span class="p_price">12,900</span></li>
+        <li><img src="img/p15.jpg" alt="어묵"><span class="p_name">어묵</span><span class="p_price">2,000</span></li>
+       </ul>
+     </div>
+     <div id="bill">
+      <h2>계산서</h2>
+        
+     </div>
     </div>
 </body>
 </html>
